--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@
   height: 100%;
   right: -2px;
   content: '';
+  z-index: 1;
 }
 
 .deadline {
@@ -78,6 +79,7 @@
   height: 100%;
   right: -2px;
   content: '';
+  z-index: 1;
 }
 .deadline::before {
   position: absolute;
@@ -89,4 +91,5 @@
   right: -10px;
   bottom: -1px;
   content: '';
+  z-index: 1;
 }
